<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_header"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_header_back"/>

            <TextView
                android:id="@+id/header_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_register"
                android:textSize="17dp" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1000"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColorHint="#939498"
                android:backgroundTint="#939498"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="#939498"
                android:backgroundTint="#939498"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_numer"
                android:textColorHint="#939498"
                android:backgroundTint="#939498"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_register_radio_on" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#939498"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="Male"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_register_radio_off" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#939498"
                    android:text="Female"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tipe_darah"
                    android:textColorHint="#939498"
                    android:backgroundTint="#939498"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:drawableRight="@drawable/ic_register_dropdown"/>

                <EditText
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Reshus"
                    android:textColorHint="#939498"
                    android:backgroundTint="#939498"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:drawableRight="@drawable/ic_register_dropdown"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="#939498"
                    android:backgroundTint="#939498"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ulang_password"
                    android:textColorHint="#939498"
                    android:backgroundTint="#939498"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="65dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_register_radio_on" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#939498"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/personal"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_register_radio_off" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#939498"
                    android:text="@string/organisasi"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/job"
                    android:textColorHint="#939498"
                    android:backgroundTint="#939498"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:drawableRight="@drawable/ic_register_dropdown"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat"
                    android:textColorHint="#939498"
                    android:backgroundTint="#939498"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat_default"
                    android:textColorHint="#939498"
                    android:backgroundTint="#939498"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:drawableRight="@drawable/ic_blood_needed_location"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_register_terms_on"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/persetujuan"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="#939498"/>
            </LinearLayout>
            <Button
                android:id="@+id/tombol_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_register"
                android:textColor="#41B3E7"
                android:background="@drawable/button_style_rounded2"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp" />


        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>