<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Almost_There">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40B4E7">


        <TextView
            android:id="@+id/Almost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/almost"
            android:gravity="center"
            android:textSize="40dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/deskripsi_almost"
            android:layout_below="@id/Almost"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_almost"
            android:layout_marginBottom="40dp"/>
        <Button
            android:id="@+id/verify"
            android:layout_below="@+id/deskripsi_almost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_style_rounded"
            android:layout_marginTop="25dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"/>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>